--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "cypress": "^12.11.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server -p 888 -c-1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
